# watch-list-api

./: .gitignore  README.md  go.mod  go.sum  main.tf
dynamodb_data_set/: main.py  pyproject.toml
modules/: api-gateway.tf  dynamodb.tf  iam.tf  lambda.tf  list-lambda.tf  local.tf  s3-for-front.tf  s3-for-lambda.tf  s3.tf
src/: .gitignore
src/cmd/: main.go
src/cmd/upsert/: main.go
